--- a/main.css
+++ b/main.css
@@ -2,13 +2,10 @@
 
 #bgimage {
 	position: absolute;
-	right: 0;
-	left: 0;
-	top: 0;
-	bottom: 0;
-	display: inline-block;
-	margin: auto;
-	height: 45%;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+    height: 45%;
 }
 
 .center {
@@ -23,10 +20,10 @@
 	display: flex;
 	flex-direction: column;
 	color: #d5b36c;
-	bottom: 14.667rem;
 	align-items: flex-start;
 	position: absolute;
-	top: 44%;
+	top: 50%;
+	transform: translate(0,-50%);
 }
 
 .fa-facebook-square {
