add zoom on click for images and made responsive

--- a/gallery/gallery.css
+++ b/gallery/gallery.css
@@ -45,6 +45,7 @@ h2:after {
 }
 
 .grid-container {
+  position: relative;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-gap: 1.11rem;
@@ -52,15 +53,78 @@ h2:after {
 
 }
 
-.grid-items img {
+.grid-items img, .click-zoom image {
   width: 100%;
-  box-shadow: 0px 2px 10px 11px rgb(0 0 0 / 20%);
+  box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%),
+              0 1px 3px 1px rgb(60 64 67 / 15%);
   border: 0.5px solid #d5b36c;
   border-radius: 10px;
-  transition: all 0.15s ease;
+  transition: transform 0.2s ease;
+  cursor: zoom-in;
 }
 
 .grid-items img:hover {
   transform: scale(1.05);
-  cursor: pointer;
+  /* cursor: pointer; */
 }
+
+.click-zoom input[type=checkbox] {
+  display: none
+}
+.click-zoom input[type=checkbox]:checked~img {
+  transform: scale(2);
+  cursor: zoom-out;
+  position: absolute;
+  height: 60%;
+  width: auto;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+  z-index: 3;
+}
+
+@media(max-width: 998px){
+  .grid-container {
+    grid-template-columns: repeat(3,1fr);
+  }
+  
+}
+
+@media(max-width: 768px){
+  .grid-container {
+    grid-template-columns: repeat(2,1fr);
+  }
+
+  .click-zoom input[type=checkbox]:checked~img {
+    width: 40%;
+    height: auto;
+  }
+  
+}
+
+
+
+
+
+
+
+/*
+zoom checkbox css
+.click-zoom img {
+  margin: 100px;
+  transition: transform 0.25s ease;
+  cursor: zoom-in
+}
+
+.click-zoom input[type=checkbox]:checked~img {
+  transform: scale(2);
+  cursor: zoom-out
+}
+<div class="click-zoom">
+  <label>
+    <input type="checkbox">
+    <img src="https://via.placeholder.com/200">
+  </label>
+</div> */
